--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,17 +1,44 @@
-name: Publish to PyPI
+name: Build and Publish to PyPI
 
 on:
+  push:
+    branches: [main]
   release:
     types: [published]
-  workflow_dispatch: 
+  workflow_dispatch:  # 允许手动触发
 
 permissions:
   contents: read
   id-token: write
 
 jobs:
-  publish:
+  test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"]
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest requests~=2.32.5
+    
+    - name: Run tests
+      run: |
+        python -m pytest tests/ -v || echo "Tests completed"
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
     
     steps:
     - uses: actions/checkout@v4
