--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,4 +1,4 @@
-name: Build and Publish to PyPI
+name: Python Package
 
 on:
   push:
@@ -12,33 +12,8 @@ permissions:
   id-token: write
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.10"]
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest requests~=2.32.5
-    
-    - name: Run tests
-      run: |
-        python -m pytest tests/ -v || echo "Tests completed"
-
-  build:
-    needs: test
-    runs-on: ubuntu-latest
-    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
     
     steps:
     - uses: actions/checkout@v4
@@ -48,13 +23,43 @@ jobs:
       with:
         python-version: "3.10"
     
-    - name: Install build tools
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build
+        pip install pytest requests~=2.32.5 build
+    
+    - name: Test with pytest
+      run: |
+        python -m pytest tests/ -v || echo "Tests completed"
     
     - name: Build package
       run: python -m build
+    
+    - name: Check package
+      run: |
+        pip install twine
+        twine check dist/*
+    
+    - name: Upload artifact
+      if: success()
+      uses: actions/upload-artifact@v4
+      with:
+        name: dist
+        path: dist/
+        retention-days: 7
+
+  publish:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
+    permissions:
+      id-token: write
+    
+    steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: dist
     
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
