--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,48 +1,17 @@
-name: Python Package
+name: Publish to PyPI
 
 on:
-  push:
-    branches: [main]
   release:
     types: [published]
   workflow_dispatch:
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest requests~=2.32.5
-    
-    - name: Test with pytest
-      run: |
-        python -m pytest tests/ -v || echo "Tests completed"
-    
-    - name: Build package
-      if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
-      run: |
-        pip install build
-        python -m build
+permissions:
+  contents: read
+  id-token: write
 
+jobs:
   publish:
-    needs: build
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
-    permissions:
-      contents: read
-      id-token: write
     
     steps:
     - uses: actions/checkout@v4
